pichome/onlyoffice/2.service-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice
  namespace: devops
  labels:
    app: onlyoffice
spec:
  sessionAffinity: ClientIP
  selector:
    app: onlyoffice
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
