pichome/onlyoffice/2.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice
  namespace: devops
  labels:
    app: onlyoffice
spec:
  sessionAffinity: ClientIP
  selector:
    app: onlyoffice
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyoffice
  namespace: devops
  labels:
    app: onlyoffice
spec:
  ingressClassName: nginx
  rules:
  - host: onlyoffice.github.icu
    http:
      paths:
      - backend:
          service:
            name: onlyoffice
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - onlyoffice.github.icu
    secretName: github-tls
